// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> can render "check" variant 1`] = `
<button
  className="btn-toggle btn btn-primary"
  disabled={false}
  onClick={[Function]}
  title="Toggle me real good!"
  type="button"
>
  <i
    className="fa far-square"
  />
</button>
`;

exports[`<ToggleButton /> can render "grid-list" variant 1`] = `
<div
  className="grid-list"
>
  <i
    className="fa fas-list"
  />
  <label
    className="switch my-auto mx-1"
  >
    <input
      checked={false}
      name="Toggle me real good!"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="slider slider-teal round slider round"
    />
  </label>
  <i
    className="fa fas-th"
  />
</div>
`;

exports[`<ToggleButton /> can render "switch" variant 1`] = `
<label
  className="switch my-auto mx-1"
>
  <input
    checked={false}
    name="Toggle me real good!"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="slider round slider round"
  />
</label>
`;

exports[`<ToggleButton /> can render with icon-only prop 1`] = `
<i
  className="fa far-square"
/>
`;
